turtleart.flower.Flower.scala.error
Erreur de compilation :
Flower:13: error: '<-' expected but ')' found.
  for(x<0 to 7){
              ^Flower:23: error: illegal start of simple expression
} 
^